Changed living to status.

--- a/SQLite.WEB/Views/Person/Details.cshtml
+++ b/SQLite.WEB/Views/Person/Details.cshtml
@@ -82,8 +82,8 @@
     <dd>@Html.DisplayFor(m => m.BornYear)</dd>
     <dt>@Html.LabelFor(m => m.DeathYear)</dt>
     <dd>@Html.DisplayFor(m => m.DeathYear)</dd>
-    <dt>@Html.LabelFor(m => m.Living)</dt>
-    <dd>@Html.DisplayFor(m => m.Living)</dd>
+    <dt>@Html.LabelFor(m => m.Status)</dt>
+    <dd>@Html.DisplayFor(m => m.Status)</dd>
 
     <dt>@Html.LabelFor(m => m.CreatedDate)</dt>
     <dd>@Html.DisplayFor(m => m.CreatedDate)</dd>
