--- a/SQLite.WEB/Views/Shared/_Layout.cshtml
+++ b/SQLite.WEB/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Hjem", "Index", "Home")</li>
                     <li>@Html.ActionLink("Personer", "Index", "Person")</li>
+                    <li>@Html.ActionLink("Hendelser", "Index", "Event")</li>
                 </ul>
             </div>
         </div>
