Text and layout changes in views

--- a/SQLite.WEB/Views/Event/Index.cshtml
+++ b/SQLite.WEB/Views/Event/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model System.Collections.Generic.IEnumerable<SQLite.WEB.Models.EventViewModel>
+﻿@model IEnumerable<SQLite.WEB.Models.EventViewModel>
 
 @{
-    ViewBag.Title = "Hendelser";
+    ViewBag.Title = "Events";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
