--- a/SQLite.WEB/Views/Home/Index.cshtml
+++ b/SQLite.WEB/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
 
 <div class="jumbotron">
     <h1>SQLite Hello World</h1>
-    <p class="lead">Tester SQLite i MVC App.</p>
+    <p class="lead">Testing SQLite in a ASP.NET MVC Application.</p>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <h2>Personer</h2>
-        <a href="@Url.Action("Index", "Person")">Gå til personliste</a>
+    <div class="col-sm-4 col-md-3">
+        <h2>Persons</h2>
+        <a href="@Url.Action("Index", "Person")">Go to person list</a>
     </div>
-    <div class="col-md-6">
-        <h2>Hendelser</h2>
-        <a href="@Url.Action("Index", "Event")">Gå til hendelsesliste</a>
+    <div class="col-sm-4 col-md-3">
+        <h2>Events</h2>
+        <a href="@Url.Action("Index", "Event")">Go to event list</a>
     </div>
 </div>
