--- a/SQLite.WEB/Views/Shared/_Layout.cshtml
+++ b/SQLite.WEB/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Hjem", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Personer", "Index", "Person")</li>
-                    <li>@Html.ActionLink("Hendelser", "Index", "Event")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Persons", "Index", "Person")</li>
+                    <li>@Html.ActionLink("Events", "Index", "Event")</li>
                 </ul>
             </div>
         </div>
