--- a/SQLite.WEB/Views/Person/Details.cshtml
+++ b/SQLite.WEB/Views/Person/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using SQLite.DAL.Models
-@model SQLite.WEB.Models.PersonViewModel
+﻿@model SQLite.WEB.Models.PersonViewModel
 
 @{
     ViewBag.Title = "Person";
