Removed Event Test action.

--- a/SQLite.WEB/Views/Person/Details.cshtml
+++ b/SQLite.WEB/Views/Person/Details.cshtml
@@ -65,7 +65,7 @@
     {
         <dt>@e.EventType.Name:</dt>
         <dd>
-            @e.SortDate
+            @e.Date
             @if (e.Place != null && e.Place.Name.Length > 0)
             {
                 <text> in @e.Place.Name</text>
