--- a/SQLite.WEB/Views/Event/Index.cshtml
+++ b/SQLite.WEB/Views/Event/Index.cshtml
@@ -21,7 +21,7 @@
         @foreach (var e in Model.OrderBy(m => m.SortDate))
         {
             <tr>
-                <td>@e.SortDate</td>
+                <td>@e.Date</td>
                 <td>@e.EventType.Name</td>
                 <td><a href="@Url.Action("Details", "Person", new {id = e.Person.Id})">@e.Person.DisplayNameTyponym</a></td>
                 <td>
